# playground

./: .gitignore  README.md
clojure/api/: CHANGELOG.md  README.md  project.clj
clojure/myproject/: README.md  project.clj
elixir/: kv.exs
elixir/community/: NOTES.md  mix.exs
elixir/community/config/: config.exs
elm/: db.json
elm/keyboard/: package.json
elm/src/: Main.elm  Msgs.elm  Update.elm  View.elm
elm/tutorial/: NOTES.md  package.json
general-js/noise/: app.js  index.html  package-lock.json  package.json  test.js
general-js/p5/: index.html  script.js
general-js/q-test/: normal.js  package.json  promises.js
general-js/tunnel/: vanilla.html
go/go-rest/: main.go  sleepy.go
go/googletechdev/: interpret  interpret.go
googletechdev/ruby/: can_balance.rb
graphql/client/: package.json
graphql/server/: package.json  webpack.config.js
html/amp/: index.html
meteor/simple-todos/: simple-todos.css  simple-todos.html  simple-todos.js
python/: example.ipynb
python/.ipynb_checkpoints/: pandas-checkpoint.ipynb
python/nn/: script.py  w1.txt  w2.txt
react/dashboard/: index.html  package.json
react/fenrir/: App.js  package.json
react/store/: package.json
react/stream/: app.js  config.js  package.json  routes.js  server.js
react/tutorial/: _comments.json  package.json  server.js
ruby/: interleave.rb
ruby/googletechdev/: decompression.rb
rust/log-to-event/: Cargo.toml
rust/log-to-event/src/: main.rs
rust/minigrep/: Cargo.toml
tangram/: README.md  heart_disease.tangram  package-lock.json  package.json  predict.js
(+56 files in other folders)
