[package]
name = "log-to-event"
version = "0.1.0"
authors = ["redroot <luke@red-root.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
